# chessprogramming-SPL

./: .gitignore  FEATURE_MODEL.md  README.md  artifact_manifest.json  pyproject.toml
c_engine_pl/: Makefile
configs/: ccrl_blitz_anchors_template.csv
docs/: UPSTREAM_README.md  ccrl_blitz_calibration.md  commonality_optimization_and_anchor_assessment.md  feature_taxonomy_and_strengthening_roadmap.md  product_line_architecture_and_interactions.md  setup_variability_model.md  stratified_variant_experiment.md  variant_constraints_and_perft.md
outputs/: commonality_opt_baseline_after.json  commonality_opt_baseline_before.json  commonality_opt_comparison.csv  commonality_opt_report.md  commonality_opt_round2_comparison.csv  commonality_opt_round2_report.md  commonality_opt_round3_comparison.csv  commonality_opt_round3_report.md  commonality_opt_stats_after.json  commonality_opt_stats_after_legality.json  commonality_opt_stats_after_masks.json  engine_feature_matrix.csv  engine_feature_matrix.md  feature_model.featureide.xml  feature_model.fml  feature_model.json  feature_model.uvl  feature_traces.csv  perft_random_variants.csv  perft_random_variants.json  perft_random_variants_after_constraint.csv  perft_random_variants_after_constraint.json  perft_random_variants_after_constraint_and_startpos_fix.csv  perft_random_variants_after_constraint_and_startpos_fix.json  perft_random_variants_depth5.csv  perft_random_variants_depth5.json  perft_random_variants_depth6.csv  perft_random_variants_depth6.json  perft_random_variants_no_castling.csv  run_report.md  (+17 more)
tests/: conftest.py  (+14 more)
(+5080 files in other folders)
